--- a/careers-ui/pom.xml
+++ b/careers-ui/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>${project.parent.groupId}</groupId>
 	<artifactId>${module.prefix}-ui</artifactId>
 	<packaging>jar</packaging>
-	<name>${company.name} - UI</name>
+	<name>${careers.name} - UI</name>
 	<description>UI CRX Package</description>
 	<profiles>
 		<!-- Full Profile: Install everything -->
@@ -60,8 +60,8 @@
 							<embeddeds>
 								<embedded>
 									<groupId>${project.groupId}</groupId>
-									<artifactId>company-core</artifactId>
-									<target>/apps/company/install</target>
+									<artifactId>careers-core</artifactId>
+									<target>/apps/careers/install</target>
 								</embedded>
 							</embeddeds>
 						</configuration>
@@ -73,7 +73,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>company-core</artifactId>
+			<artifactId>careers-core</artifactId>
 		</dependency>
 <!-- Apache Sling Dependencies  -->
 	
