--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
-		<company.name>Careers</company.name>
+		<careers.name>Careers</careers.name>
 		<cq.host>localhost</cq.host>
 		<cq.port>4502</cq.port>
 		<cq.user>admin</cq.user>
 		<cq.password>admin</cq.password>
 		<module.prefix>careers</module.prefix>
 	</properties>
-	<name>${company.name} - Parent</name>
+	<name>${careers.name} - Parent</name>
 	<description>Careers Project</description>
 	<build>
 		<plugins>
